--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ body {
   justify-content: center;
   padding: 120px 30px 60px;
   background-image: var(--gradient-hero), url('64c69643-4b0b-4874-a276-92f9c99412de.png');
-  background-size: cover;
+  background-size: auto; /* اندازه اورجینال بدون زوم */
   background-position: center;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
@@ -332,7 +332,7 @@ body {
   box-shadow: var(--shadow-xl);
 }
 
-.btn-secondary {
+.btnZF-secondary {
   background: transparent;
   color: white;
   padding: 16px 32px;
