--- a/index.html
+++ b/index.html
@@ -1975,7 +1975,7 @@ body {
             <i class="fas fa-calendar"></i>
             <span data-fa="دی ۱۴۰۰ — در حال حاضر" data-en="Dec 2021 — Present">دی ۱۴۰۰ — در حال حاضر</span>
           </div>
-          <h3 class="timeline-title" data-fa="کارشناس ارشد فنی و DevOps" data-en="Senior Technical & DevOps Engineer">کارشناس ارشد فنی و DevOps</h3>
+          <h3 class="timeline-title" data-fa="کارشناس ارشد فنی و DevOps" data-en="Senior Technical & DevOps Engineer">کارشناس ارشد پشتیبانی فنی </h3>
           <div class="timeline-company" data-fa="تل سی — ایران، تهران" data-en="Tel-C — Iran, Tehran">تل سی — ایران، تهران</div>
           <div class="timeline-description" data-fa="مدیریت کامل زیرساخت‌های لینوکس، VoIP و پایگاه‌های داده برای سیستم‌های enterprise. طراحی و پیاده‌سازی راهکارهای شبکه امن، بهینه‌سازی عملکرد سیستم‌ها، و اتوماسیون فرآیندها با استفاده از Zabbix، Grafana و n8n. رهبری تیم L2 support و هماهنگی بین تیم‌های مختلف فنی." data-en="Full-stack management of Linux, VoIP, and database infrastructure for enterprise systems. Designed and implemented secure network solutions, system performance optimization, and process automation using Zabbix, Grafana, and n8n. Led L2 support team and coordinated between various technical teams.">
             مدیریت کامل زیرساخت‌های لینوکس، VoIP و پایگاه‌های داده برای سیستم‌های enterprise. طراحی و پیاده‌سازی راهکارهای شبکه امن، بهینه‌سازی عملکرد سیستم‌ها، و اتوماسیون فرآیندها با استفاده از Zabbix، Grafana و n8n. رهبری تیم L2 support و هماهنگی بین تیم‌های مختلف فنی.
