--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,7 @@ body {
              aria-label="لینکدین محمدامین طیبی" title="LinkedIn Profile">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="mailto:amintayebi@gmail.com" class="social-link" aria-label="ایمیل">
+          <a href="mailto:amintayebi34@gmail.com" class="social-link" aria-label="ایمیل">
             <i class="fas fa-envelope"></i>
           </a>
           <a href="https://github.com/yourusername" class="social-link" target="_blank" rel="noopener noreferrer" 
