--- a/index.html
+++ b/index.html
@@ -2107,7 +2107,7 @@ body {
         </div>
         <h3 class="contact-title" data-fa="ایمیل" data-en="Email">ایمیل</h3>
         <div class="contact-info">
-          <a href="mailto:amintayebi@gmail.com" class="contact-link" aria-label="ارسال ایمیل">amintayebi@gmail.com</a>
+          <a href="mailto:amintayebi34@gmail.com" class="contact-link" aria-label="ارسال ایمیل">amintayebi34@gmail.com</a>
         </div>
       </div>
       
@@ -2173,7 +2173,7 @@ body {
         © ۱۴۰۳ محمدامین طیبی. ساخته شده با <span class="footer-heart">❤️</span> و ☕
       </div>
       <div class="footer-links">
-        <a href="mailto:amintayebi@gmail.com" class="footer-link" data-fa="ایمیل" data-en="Email">ایمیل</a>
+        <a href="mailto:amintayebi34@gmail.com" class="footer-link" data-fa="ایمیل" data-en="Email">ایمیل</a>
         <a href="https://www.linkedin.com/in/amin-tayebi-b40977233/?originalSubdomain=ir" 
            class="footer-link" target="_blank" rel="noopener noreferrer" 
            data-fa="لینکدین" data-en="LinkedIn">لینکدین</a>
